2009-May-18 Dave Glowacki

	* Review changes to Mesmer Manual

2009-May-17 Struan Robertson

	* Mesmer Manual.doc: Documentation review.

2009-May-17 Chris Morley

	* Grand renaming.Affects QA files, exampl file and some src files.
	O_2              -> O2
	HO_2             -> HO2
	N_2	             -> N2
	CH_2CCH_2        -> CH2CCH2
	CH_2CO           -> CH2CO
	acetyl_radical   -> acetyl
	Classical rotors -> ClassicalRotors
	QM rotors        -> QMRotors
	Mesmer ILT       -> MesmerILT
	Simple ILT       -> SimpleILT

	* Delete a few old example files
	
	* Modify tutorial (now ready to use)

_2009_05_15__17_06_19_ Chi-Hsiu Liang

  * A check section in "EckartCoefficients.cpp" requires examination / LINE 21 to LINE 29
  * Fixed CellOffset in source term in AssociationReaction.cpp, which also corrects the baseline for OH acetylene system.

2009-May-15 Chris Morley

	* src/MolecularComponents.cpp, src/AssignMolTypes.cpp,
	MesmerQA/Acetyl O2 association/Acetyl_O2minimal.xml, defaults.xml:
	Put spinMultiplicity default as an attribute on <molecule>, rather
	than as	a property. Either can be used for input, but the attribute
	(as an existing CML	feature)is now preferred.
	
	* src/Constants.h, src/Rdouble.h: Make NAN a const double and change
	the return type of Rdouble operator++ and -- This possibly might
	have an effect on the Linux difficulties.

	mesmer1.xsl, mesmer2.xsl. popDiag.xsl is just a stub at the moment.
	
	* Windows VC9/distribution/NSISScriptToCreateInstaller.nsi:
	Include in Add and Remove Programs.
	
_2009_05_15__13_28_06_ Chi-Hsiu Liang

  * Do not output grainDOS for individual source term molecules

_2009_05_15__10_45_44_ Chi-Hsiu Liang

  * Added pdf version of the manual

_2009_05_15__10_37_29_ Chi-Hsiu Liang

  * Update the page numbers in the Table of Contents.

_2009_05_15__10_20_39_ Chi-HSiu Liang

  * Deleted unused files in Documentation folder.

2009-May-14 Dave Glowacki

  * Manual Edit
  * get rid of methylene_D2 association folder